# tinyRPCService

./: CMakeLists.txt
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
log/: 2022-6-30-log.txt  2022-7-1-log.txt
src/: CMakeLists.txt  tinyRPCApplication.cc  tinyRPCChannel.cc  tinyRPCConfig.cc  tinyRPCController.cc  tinyRPCHeader.pb.cc  tinyRPCHeader.proto  tinyRPCProvider.cc  tinylogger.cc
src/include/: lockTinyLoggerQueue.h  tinyLogger.h  tinyRPCApplication.h  tinyRPCChannel.h  tinyRPCConfig.h  tinyRPCController.h  tinyRPCHeader.pb.h  tinyRPCProvider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
